2023-03-26 (12.26)
	ANDROID: Fix setenv error #187
	ANDROID: update web UI dependencies
	COMMON: Fix bug in BGETC when using sockets (Joe7M)
	COMMON: Fix EQV bug. "0 EQV 0" will return correct result "1" (Joe7M)
	COMMON: Fix: "0 IMP 0" returns now correct result 1 (Joe7M)
	UI: FLTK and SDL version numbers now included in SBVER
	UI: fix editor display issues with DOS line-endings

2023-02-19 (12.26)
	SDL: Fixed an issue with window resizing #144
	COMMON: Fixed "make dist" so it can produce a package with all internal dependencies

2023-01-20 (12.26)
	COMMON: Fixed DIM lower bound (Joe7M)
	COMMON: RGB and RGBF now clamp parameters (Joe7M)
	COMMON: Fix for BIN and changes to return values of POLYCENT and POLYAREA (Joe7M)

2023-01-09 (12.26)
	COMMON: INPUT #F; now supports up to 64 parameters
	COMMON: Implemented STATMEDIAN() to calculate the median of a data sample in statistics (Joe7M)
	COMMON: Implemented STATSTD() to calculate standard deviation (Joe7M)

2023-01-09 (12.26)
	COMMON: Fix printing chr(0) into a file or network interface

2022-11-13 (12.26)
	COMMON: Fix line-chart line drawing to use current foreground color

2022-11-13 (12.25)
	ANDROID: Updated file manager web UI:
	- Implemented delete command
	- Implemented upload support for non .bas files
	- Fixed date column sorting
	COMMON: SPLIT with empty input now gives zero length output #147
	COMMON: Fix for bug #166:  Display floating point numbers with high precision (by J7M)
	COMMON: Fixed functions Polyarea, Polycent (by J7M)
	CONSOLE: vt100 (esc sequences) support for console (by J7M)

2022-11-06 (12.25)
	ANDROID: fix crash with INPUT command while scrolled #160

2022-08-26 (12.25)
	CONSOLE: Fixed TAB handling
	COMMON: Only TRIM Strings

2022-04-11 (12.24)
	COMMON: m3Apply no longer crashes if the second argument is not an array

2022-04-09 (12.24)
	EMCC: Implemented emscripten web version

2022-02-23 (12.24)
	COMMON: Fix array access with embedded strings #136

2022-02-23 (12.24)