@@ -31,10 +31,11 @@ ndk-build-release:
 	(cd jni && ${NDK}/ndk-build NDK_DEBUG=0)
 
 release:
-	(./gradlew clean assemble)
+	(./gradlew clean :app:bundle)
 
 library:
 	(./gradlew clean assemble)
 	(mkdir -p dist)
 	(cp -R app/build/intermediates/stripped_native_libs/release/out/lib/ dist)
 	(cp app/build/intermediates/dex/release/minifyReleaseWithR8/classes.dex dist)
+
