@@ -11,7 +11,7 @@ android {
     targetSdkVersion 33
     versionCode 59
     versionName '12.26'
-      resConfigs 'en'
+    resConfigs 'en'
   }
 
   signingConfigs {
@@ -59,6 +59,6 @@ android {
 }
 
 dependencies {
-  implementation 'androidx.core:core:1.9.0'
+  implementation 'androidx.core:core:1.10.0'
   testImplementation 'junit:junit:4.13.2'
 }
